2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ExceptionRoutedEventArgs.cs: Implement enough to get a decent
	error message instead of TODO.

2009-07-09  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Duration.cs: Subtract != Add.

2009-07-07  Alan McGovern  <amcgovern@novell.com>

	* DependencyProperty.g.cs: Add an "IsTemplateItem" attached
	  property.

	* VisualState.cs: Update VSM so that it works now that we have
	  better namescope handling.

2009-06-26  Chris Toshok  <toshok@ximian.com>

	* DependencyProperty.g.cs: regen.

2009-06-26  Larry Ewing  <lewing@novell.com>

	* CornerRadius.cs: reorder the struct members.

2009-06-24  Chris Toshok  <toshok@ximian.com>

	* FontStyleKind.cs: we need to add Oblique back in here so it can
	be handled by the managed code in MoonlightTypeConverter.

2009-06-23  Jackson Harper  <jackson@ximian.com>

	* PropertyPathConverter.cs: We should still create property paths
	for null/empty strings.

2009-06-17  Sebastien Pouliot  <sebastien@ximian.com>

	* Deployment.cs: Support both absolute and relative URI (which is not
	what the default ctor does).

2009-06-16  Andreia Gaita  <avidigal@novell.com>

	* DependencyObject.cs: a little code reuse and slight tweaking of the
	dropref explanation. Also, drop the native ref on new objects, too.

2009-06-16  Andreia Gaita  <avidigal@novell.com>

	* Application.cs: Dispose properly by removing the application from the
	ToggleRef list, the same pattern that DO uses. Also, drop the extra ref
	that it has upon creation, ToggleRef has enough refs on it to go around.

2009-06-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyPart.cs: Avoid side effects with Deployment (adding to
	its assembly list). Allow a fast-path for MemoryStream (only).
	* Deployment.cs: Throw an exception if an assembly cannot be 
	downloaded. Support absolute URI (can be used for cross domain).
	Remove unused list (delay_assemblies).

2009-06-16  Alan McGovern  <amcgovern@novell.com>
