@@ -565,19 +565,25 @@ namespace System.Windows {
 		internal static void OnUnhandledException (object sender, Exception ex)
 		{
 			try {
-				if (Application.Current != null && Application.Current.UnhandledException != null) {
+				Application app = Application.Current;
+				string unmanaged_report = ex.Message;
+
+				if (app != null && app.UnhandledException != null) {
 					ApplicationUnhandledExceptionEventArgs args = new ApplicationUnhandledExceptionEventArgs (ex, false);
 					try {
-						Application.Current.UnhandledException (Application.Current, args);
+						app.UnhandledException (sender, args);
+						if (args.Handled)
+							unmanaged_report = null;
 					} catch (Exception ex2) {
 						Console.WriteLine ("Exception caught in Application UnhandledException handler: " + ex2);
-						NativeMethods.surface_emit_error (Deployment.Current.Surface.Native,
-										  8, // FIXME: EXECUTION_ENGINE_EXCEPTION code.  should it be something else?
-										  4004,
-										  ex2.Message);
+						unmanaged_report = ex2.Message;
 					}
 				} else {
 					Console.WriteLine ("Unhandled Exception: " + ex);
+				}
+
+				if (unmanaged_report != null) {
+					Deployment.Current.EmitError (4004, unmanaged_report);
 				}
 			} catch {
 				// Make this completely safe.
