@@ -1,3 +1,8 @@
+2009-07-15  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* System.Windows.auto.s[s]c: Regenerated for MultiScaleTileSource,
+	ManagedXamlLoader and Deployment changes.
+
 2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* System.Windows.auto.sc: Regenerated.
