@@ -1,3 +1,10 @@
+2009-07-15  Sebastien Pouliot  <sebastien at ximian.com>
+
+	* Application.cs: If unhandled report the exception back to the 
+	plugin OnError handler. Fix DRT #357
+	* Deployment.cs: Extract a EmitError method so we avoid spreading
+	SSC to more methods.
+
 2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
 	* ExceptionRoutedEventArgs.cs: Implement enough to get a decent
